branches/wip/Archive/ee1348ef3daff1d09f4fd2a7ff722866-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘void f(const char*)’:
main.cpp:34:1: error: a function-definition is not allowed here before ‘{’ token
 {
 ^
main.cpp:41:1: error: expected ‘}’ at end of input
 }
 ^
